--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,15 @@ authors = [{ name = "Riccardo De Maria", email = "riccardodemaria@gmail.com" }]
 license = { text = "MIT" }
 urls = { homepage = "https://github.com/rdemaria/lhcoptics", repository = "https://github.com/rdemaria/lhcoptics" }
 keywords = ["LHC", "beam dynamics"]
-dependencies = [ "numpy", "matplotlib", "xsuite", "cpymad"]
+dependencies = [
+    "numpy",
+    "matplotlib",
+    "xsuite",
+    "cpymad",
+    "pyyaml",
+    "scipy",
+    "pandas",
+]
 
 [tool.black]
 line-length = 79
